--- a/clases-pilates.html.twig
+++ b/clases-pilates.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>40% DTO</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>40% DTO</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Iníciate en el Pilates con nuestras clases virtuales.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">PILATES AL MEJOR PRECIO</h2>
                     <p class="text-white text-medium mb-5">Con nuestras sesiones  ahorrarás tiempo y dinero a la vez que ganas en salud y bienestar.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>En ictiva tendrás acceso a las clases de Pilates y prácticas guiadas de esta disciplina, por nuestra monitora Cristina Arribas. Todas las sesiones se han configurado a partir de vídeos que muestran los ejercicios fundamentales para la conexión entre el cuerpo y la mente, de un modo sencillo y de fácil ejecución para principiantes.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Las diferentes sesiones a las que tendrás acceso, abarcan el método Pilates en forma de ejercicios que te ayudarán a mejorar el control del cuerpo y aumentar la fuerza y la flexibilidad de la musculatura profunda. Todas las clases son impartidas por nuestra monitora especialista en pilates, y te mostraremos como empezar desde un nivel principiante, y desde casa, aprendiendo los beneficios de esta disciplina.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Ya sea desde algún lugar donde te motive (playa, bosque, parque, etc..), o desde la intimidad de tu hogar, con nuestras sesiones encontrarás ese equilibrio que tanto necesitas para afrontar el día a día.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Si quieres saber el precio de las clases de pilates, consulta nuestras tarifas!</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">También aprenderás como se debe respirar a medida que se hacen los ejercicios, para de esta manera poder controlar todo nuestro cuerpo.</p>
                     <p class="mb-3 ls text-medium">Con la práctica diaria de esta actividad, en pocas semanas podrás comprobar todos los beneficios que te aporta el método Pilates.</p>
                     <p class="mb-3 ls text-medium">No lo dudes más! Si quieres cuidar tus músculos, ganar flexibilidad y sobre todo fortalecer tu abdomen y  tu espalda, ésta es tu disciplina.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -427,7 +427,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La app de ictiva, gracias a su variedad de disciplinas (25) y sus más de 800 videosesiones, y diversas rutinas de entrenamiento con planes nutricionales incluidos, hace de ella la aplicación de salud y bienestar más completa del mercado.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a descargártela? Tienes más de 50 clases gratis!</p>
 
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -443,7 +443,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva encontrarás una sala dedicada única y exclusivamente al método Pilates en ictiva con Cristina Arribas, instructora del método Pilates y certificada en Pilates Matwork a través de la Asociación Española de Pilates. Asimismo, certificada con Stott Pilates, Escuela Internacional de Pilates Reformer y, profesora en activo.</p>
                     <p class="mb-3 ls text-medium">Tanto si nunca has realizado Pilates, como si eres experto/a, en ictiva encontrarás tu lugar: Te esperan 4 niveles distintos que se adaptan a ti, para que empieces con el que te sea de mayor comodidad y vayas avanzando a tu ritmo y con la dificultad in crescendo.</p>
                     <p class="mb-3 ls text-medium">Además, tienes tu disposición un entrenamiento completo de seis video-sesiones de Pilates Barre, tanto en castellano como en inglés. Esta modalidad  consiste en realizar los ejercicios con una barra de ballet pero, si no dispones de una barra con la que efectuar la clase, puedes ayudarte de una silla. Son muchos los beneficios que podemos conseguir con Pilates Barre, como bajar de peso, reducir la celulitis, estilizar las piernas, ganar flexibilidad y una mayor salud para tus músculos y huesos.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -459,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es de vital importancia que sigas una serie de recomendaciones para iniciarte en esta disciplina.. La respiración es muy importante en esta disciplina y sirve como medio para lograr la concentración y dejar a un lado los pensamientos. Préstale atención para poder ir avanzando en la práctica.</p>
                     <p class="mb-3 ls text-medium">Sigue los consejos de nuestra profesora Cristina Arribas, en todos los ejercicios  para acabar las clases habiendo adquirido todos los movimientos  y los beneficios que te proporciona esta disciplina. Con sus recomendaciones, prepararás tu cuerpo paulatinamente, evitarás lesiones, ganarás flexibilidad y disfrutarás de cada clases.</p>
                     <p class="mb-3 ls text-medium">Es de vital importancia que no quieras ir deprisa y que disfrutes de cada movimiento, con lo que aconsejamos repetir cada clase todas las veces que sean necesarias hasta que queden asumidos correctamente todos los ejercicios.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
