--- a/ejercicios-para-gluteos.html.twig
+++ b/ejercicios-para-gluteos.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>40% DTO</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Descubre los mejores ejercicios de glúteos y empieza a entrenarlos hoy mismo.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Ejercicios para aumentar glúteos desde casa.</h2>
                     <p class="text-white text-medium mb-5">Fáciles de hacer, aprenderlos te llevará unos minutos y te aportarán grandes beneficios, descúbrelos a continuación.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Para evitar que esto pase debemos hacer trabajar los glúteos en casa. Son unos músculos importantes que participan el mayor parte de los movimientos que realizamos en nuestra vida diaria, es por esto que debemos tenerlos fuertes y tonificados, para que nos sigan el ritmo y nos ayuden en todo lo posible. </li>
 						<li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Para que puedas entrenarlos en casa hemos preparado esta sección de ejercicios para glúteos, no te la pierdas.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Después del calentamiento podéis empezar con los ejercicios para aumentar glúteos, por ejemplo los de tipo peso muerto que se hacen usando el propio peso del cuerpo, como los rollers o el puente con pierna cruzada. También podéis hacer las típicas sentadillas (y todas sus variantes) o extensión de caderas.</li>
 						<li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Otra forma de hacer ejercicios glúteos es a través de las disciplinas, el combat por ejemplo es una modalidad ideal para hacerlos trabajar. El steps o el aeróbic también os ayudarás a definirlos.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p class="mb-3 ls text-medium">En nuestro apartado dietas encontrarás dietas de 5 platos diarios según el objetivo que tengas para que lo consigas más rápido y para que estés más sano.</p>
 					<p class="mb-3 ls text-medium">Los platos que forman estas dietas son fáciles de hacer y en cada uno de ellos te enseñamos como hacerlos, verás que son muy sabrosos y que no pasarás hambre. Si alguno de ellos no te gusta o no lo puedes comer, no hay problema, lo puedes sustituir por otro que te sugerimos.</p>
 					<p class="mb-3 ls text-medium">Además, tendrás la información nutricional de cada plato, lo que siempre viene bien para controlar cantidades y el valor nutricional de cada comida.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p class="mb-3 ls text-medium">Los abonados tienen acceso a más de 800 videosesiones diferentes de todas las disciplinas. Esta es la mejor forma de llevar tu entrenamiento donde quieras y hacer deporte en cualquier momento. Así no tendrás excusa para saltarte ninguna sesión.</p>
 					<p class="mb-3 ls text-medium">Además nuestra aplicación es una de las más completas del mercado puesto que también te proporciona información sobre tu evolución deportiva indicando tu IMC, tu peso, las calorías que has quemado, las videosesiones que has visto al completo y mucho más.</p>
 					<p class="mb-3 ls text-medium">La encontrarás en Apple Store si tu móvil funciona con iOS o en Google Play si lo hace con Android. ¡Descárgala hoy y empieza a entrenarte en casa!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -442,7 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p class="mb-3 ls text-medium">Lo que hace esta herramienta es darte una frase de ánimo cada vez que realizas haces una videosesion al completo.</p>
 					<p class="mb-3 ls text-medium">Pero eso no es todo, además, también te proporciona puntos al final de cada entrenamiento para que los puedas acumular. Los tres usuarios que tengas más puntos la final de cada mes y de cada trimestre ganarás un premio. Para que puedas ganar puntos extra puedes compartir tus resultados en las redes sociales, así tu familia y amigos también pueden animarte.</p>
 					<p class="mb-3 ls text-medium">Con todas estas herramientas estarás más preparado que nunca para entrenar y lograr tus objetivos, cómo aumentar glúteos ya no tendrá ningún secreto para ti.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -459,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p class="mb-3 ls text-medium">Es importante que sigas siempre las instrucciones de ejecución que dan los entrenadores a lo largo de los vídeos para hacerlo bien y evitar el riesgo de sufrir una lesión, porque tú eres el responsable del seguimiento de las mismas.</p>
 					<p class="mb-3 ls text-medium">Las calorías que vas a quemar durante los ejercicios son indicativas, ya que esto depende de varios factores. En ictiva no nos hacemos responsables del uso incorrecto de nuestra plataforma y no garantizamos los resultados.</p>
 					<p class="mb-3 ls text-medium">Poniendo en práctica estos consejos, tu rutina tendrá un buen impacto y tendrás buenos resultados. ¡No lo dudes más y empieza hoy a ponerte en forma desde casa gracias a ictiva, tu gimnasio online! En pocas semanas verás unos resultados increíbles.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
