--- a/index.html.twig
+++ b/index.html.twig
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>40% DTO</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -164,10 +164,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>40% DTO</strong></a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU CAMBIO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -181,20 +181,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <img src="/homes/img/img-landing/40dto-ictiva.png" class="img-blackfriday" alt="Oferta Nuevos Propósitos 2020 Ictiva" width="300" height="195">
+                <!-- <img src="/homes/img/img-landing/40dto-ictiva.png" class="img-blackfriday" alt="Oferta Nuevos Propósitos 2020 Ictiva" width="300" height="195"> -->
                 <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Últimos días - 30% dto - Código: FBK30</p> -->
                 <!-- <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p> -->
-                <h2 class="pt-5 mb-0 text-primary text-uppercase font-weight-bold">2020 Odisea en el</h2>
-                <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
+                <!-- <h2 class="pt-5 mb-0 text-primary text-uppercase font-weight-bold">2020 Odisea en el</h2> -->
+                <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Tu Gimnasio Online</h1>
+                <h2 class="py-1 py-sm-3 py-lg-3 text-white font-weight-bold">Únete al movimiento Healthy</h2>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <!-- <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Te verás bien, te sentirás mejor.</h2> -->
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                        <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                        <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                     </div>
                   </div>
                 </div>
@@ -283,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container text-center">
             <div class="row py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
@@ -327,7 +328,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row text-center py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
