--- a/tabla-abdominales.html.twig
+++ b/tabla-abdominales.html.twig
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>40% DTO</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -258,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>40% DTO</strong></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Presume de un abdomen envidiable con las sesiones de ictiva.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">La tabla de abdominales para principiantes perfecta</h2>
                     <p class="text-white text-medium mb-5">Tablas de ejercicio abdominal para hacer en casa que se adaptan a todo tipo de persona y condición física. Empieza hoy mismo!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">La tabla abdominales para mujeres es un plan específico que empieza con vídeos de corta duración (unos 7 minutos), para dar tiempo al cuerpo a que se adapte a esta disciplina y pueda descansar correctamente, con un aumento gradual de la duración de las sesiones.</p>
                     <p class="mb-3 ls text-medium">Como habrás hecho esta evolución, no te será difícil aguantar el ritmo y podréis hacer las sesiones más largas, de unos 18.</p>
                     <p class="mb-3 ls text-medium">Nuestras entrenadoras Sandra Rojo y Elena Guerrero son las que se encargará de guiarte a lo largo de tu plan de entrenamiento y explicarte en qué consiste cada ejercicio. En los vídeos encontrarás información adicional que os puede interesar sobre el entrenamiento que estás haciendo, como por ejemplo a qué disciplina pertenece, qué parte del cuerpo hace trabajar, cuántas calorías vas a quemar y la duración del video.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para moldear el cuerpo masculino y encontrar ejercicios específicos para ellos, hemos creado la sección six-pack man. Con una tabla abdominales para hombre. En este caso es Jonathan Bueno el que se encarga de guiarte en todo el proceso.</p>
                     <p class="mb-3 ls text-medium">Empezarás la rutina con vídeos cortos, para que tu cuerpo se adapte a ellos. Irás aumentando la duración y dificultad de los entrenamientos con el paso de los días, hasta llegar a ejercicios de casi 40 minutos.</p>
                     <p class="mb-3 ls text-medium">Hay una gran variedad de ejercicios en la tabla abdominales para hombre, para que no tengas la sensación de repetición constante. De esta manera, puedes encontrar ejercicios como la flexión Spiderman, dónde tendrás que ponerte sobre una esterilla como si fueras a hacer una flexión normal, pero llevaremos las rodillas a los brazos, primero con una pierna, manteniendo la posición y luego otra. También hay ejercicios para hacer de pie como el salto de cuerda con un pie (este ejercicio forma parte de la sesión número 12).</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para conseguir un abdomen fuerte y marcado es importante seguir una rutina marcada de deporte que te permita quemar grasa al principio y tonificar los abdominales una vez se tenga cierta forma física. Para ello, es importante seguir las instrucciones de los monitores en todo momento para no sufrir lesiones mientras los hacemos y para que nos guía a lo largo de nuestro camino para poder lograr el objetivo de tener un abdomen 10.</p>
                     <p class="mb-3 ls text-medium">Como veis la constancia es la principal clave de un abdomen plano pero gracias a la tabla de ejercicios abdominales de ictiva os será muy fácil seguir los entrenamientos. Nuestro plan de ejercicios consta de una rutina de 4 semanas con ejercicios a realizar todos los días.</p>
                     <p class="mb-3 ls text-medium">Para que la rutina sea más amena puedes hacer ejercicios sueltos de abdominales, hacer una disciplina de abdominales, o una de las siguientes disciplinas : Fitness, Yoga, Pilates, Gimnasia Hipopresiva, TBC de esta manera harás ejercicio abdominal sin apenas darte cuenta.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva queremos ofrecerte un servicio completo y una web donde puedas cambiar tu vida y tu cuerpo desde un mismo lugar a la vez que te facilitamos al máximo la tarea. Es por ello que hemos incluido un apartado de dietas.</p>
                     <p class="mb-3 ls text-medium">En este apartado encontrarás las dietas en función de tus objetivos. En especial aquellas que te ayudarán a quemar la grasa abdominal tan difícil de eliminar. Las dietas están compuestas de 5 comidas diarias, si un plato no te gusta, puedes sustituirlo por otro que más te guste. Además en cada receta te hemos indicado la información nutricional.</p>
                     <p class="mb-3 ls text-medium">Tienes todas las herramientas para hacer un cambio completo, ¿a qué esperas para empezar?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Llévate tu tabla de <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary">abdominales para principiantes</a> allí dónde vayas. La App que hemos desarollado os permitirá acceder a todos los vídeos relacionados con la zona abdominal, pero además, solo con descargarla podrás ver 50 vídeos gratis, de todas las disciplinas que ofrecemos en ictiva. Para que pruebes tantas veces como quieras las que más te gusten.</p>
                     <p class="mb-3 ls text-medium">Una vez registrados, tendrás acceso a más de 800 vídeo-sesiones de las 21 disciplinas con las que contamos. Además, te daremos información importante sobre tu evolución a medida que vayas haciendo los ejercicios. Por ejemplo, tu IMC, tu peso, los vídeos que has visto o las calorías que has quemado, todo esto en forma de gráfico y estadísticas para que sea más visual y para mejorar la lectura de los resultados.</p>
                     <p class="mb-3 ls text-medium">Es muy importante la constancia, por esto, ya no tendréis excusa para saltaros una sesión de entrenamiento.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
