--- a/Archivos twig 30 junio 2020/index.html.twig
+++ b/Archivos twig 30 junio 2020/index.html.twig
@@ -19,7 +19,7 @@
     {'GTM-NGZ6FLX':true});</script>
     <!-- End Google Optimze -->
 
-    
+
     <!-- Page hiding snippet (recommended) -->
     <style>.async-hide { opacity: 0 !important} </style>
     <script>
@@ -148,13 +148,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div id="menu-wrap" class="container-fluid bg-white fixed-top">
         <div class="row my-2">
-            <nav class="navbar navbar-toggleable-md navbar-light col-7 bg-white">
+            <nav class="navbar navbar-toggleable-md navbar-light col-5 col-lg-7 bg-white">
                 <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-bg-icon"></span>
                 </button>
                 <div class="container pl-lg-0">
-                    <a class="navbar-brand mx-5 ml-lg-0" href="/">
-                        <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
+                    <a class="navbar-brand mx-4 ml-lg-0" href="/">
+                        <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid ml-2 ml-md-0">
                     </a>
                     <div class="collapse navbar-collapse" id="navbarExample">
                         <ul class="navbar-nav ml-5">
@@ -165,22 +165,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=cvd"><strong>Canjea tu código descuento</strong></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="col-5 no-padding bg-white">
+            <div class="col-5 no-padding bg-white hidden-md-down">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=cvd"><strong>Canjea tu código descuento</strong></a>
                     </li>
-                    <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO</a>
-                    </li>
+                    <!-- <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENO</a>
+                    </li> -->
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-7 no-padding bg-white hidden-lg-up">
+                <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
+                    <li class="bg-grey p-0 py-sm-2 p-xl-2 ">
+                        <a class="text-dark btn text-uppercase px-1" style="font-size: 0.9rem;" href="https://www.ictiva.com/tarifas/?home=cvd"><strong>Canjea tu código</strong></a>
+                    </li>
+                    <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
+                        <a class="text-white btn text-uppercase px-1" style="font-size: 0.9rem;" href="https://www.ictiva.com/usuarios/login/">Usuarios</a>
                     </li>
                 </ul>
             </div>
@@ -192,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
                 <!-- <img src="/homes/img/img-landing/40dto-ictiva.png" class="img-blackfriday" alt="Oferta Nuevos Propósitos 2020 Ictiva" width="300" height="195"> -->
-                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Últimos días - 30% dto - Código: FBK30</p> -->
+                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">#YoMeQuedoEnCasa - 30% dto - Código: CVD30</p>
                 <!-- <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p> -->
                 <!-- <h2 class="pt-5 mb-0 text-primary text-uppercase font-weight-bold">2020 Odisea en el</h2> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Tu Gimnasio Online</h1>
@@ -200,12 +210,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <!-- <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Te verás bien, te sentirás mejor.</h2> -->
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENO</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                        <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                        <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENO</a></p>
                     </div>
                   </div>
                 </div>
@@ -294,7 +304,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container text-center">
             <div class="row py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENO</a></p>
                 </div>
             </div>
         </div>
@@ -338,7 +348,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row text-center py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENO</a></p>
                 </div>
             </div>
         </div>
